@@ -1,5 +1,12 @@
 2008-04-10  Vincent Untz  <vuntz@gnome.org>
 
+	* clock-location-tile.c: (clock_location_tile_fill): actually, we don't
+	have to call can_set_system_timezone() here since the button label is
+	dynamically set on EnterNotify anyway. Again, save some time quite
+	easiliy.
+
+2008-04-10  Vincent Untz  <vuntz@gnome.org>
+
 	Do not load the image when the object is created. Only load it once we
 	actually have a useful allocation to display it. Else, we were loading
 	it twice on the calendar popup: once on object creation, and once when
